integration/tests/error_connect_timeout.err
error: Http Connection
  --> tests/error_connect_timeout.hurl:1:5
   |
 1 | GET http://10.0.0.0
   |     ^^^^^^^^^^^^^^^ Timeout has been reached
   |

